# bedrock-fm

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml
bedrock_fm/: __init__.py  ai21.py  amazon.py  anthropic.py  bedrock.py  bedrock_image.py  cohere.py  cohere_embeddings.py  meta.py  mistral.py  model.py  stability.py  titan_embeddings.py
bedrock_fm/exceptions/: __init__.py
html/: bedrock_fm.html  index.html  search.js
notebooks/: agents.ipynb  ai21.ipynb  multi_modal.ipynb  test.ipynb
tests/: test_ai21.py  test_chat.py  test_claude.py  test_claude3.py  test_cohere.py  test_cohere_command_r.py  test_cohere_embeddings.py  test_embeddings.py  test_meta_llama2.py  test_meta_llama3.py  test_meta_llama3_2.py  test_mistral_mistral.py  test_mistral_mistral_large.py  test_mistral_mixtral.py  test_stability.py  test_titan.py  test_titan_image_generation.py  test_titan_image_generation_background_removal.py  test_titan_image_generation_color_guided.py  test_titan_image_generation_conditional.py  test_titan_image_inpainting.py  test_titan_image_outpainting.py  test_titan_image_variation.py
tools/: gen_model_enum.py
